RESOLVED FIXED171298
Unauthenticated requests should not use client certificates
https://bugs.webkit.org/show_bug.cgi?id=171298
Summary Unauthenticated requests should not use client certificates
youenn fablet
Reported 2017-04-25 16:40:19 PDT
See radar 18340170
Attachments
Patch (2.08 KB, patch)
2017-04-25 16:41 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-04-25 16:41:31 PDT
WebKit Commit Bot
Comment 2 2017-04-26 16:11:24 PDT
Comment on attachment 308166 [details] Patch Clearing flags on attachment: 308166 Committed r215836: <http://trac.webkit.org/changeset/215836>
WebKit Commit Bot
Comment 3 2017-04-26 16:11:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.