Unauthenticated CORS preflight requests should not use client certificates https://bugs.webkit.org/show_bug.cgi?id=171298

Patch by Youenn Fablet <youenn@apple.com> on 2017-04-26
Reviewed by Alex Christensen.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::NetworkSessionCocoa): Ensuring that session dedicated to requests that do not want to use credentials do not look for client credentials.

Canonical link: https://commits.webkit.org/188233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215836 268f45cc-cd09-0410-ab3c-d52691b4dbfc